kustomize/nocodb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nocodb
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt-production'
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - nocodb.pravna-mreza.si
      secretName: nocodb-tls
  rules:
    - host: nocodb.pravna-mreza.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nocodb
                port:
                  number: 8080
